welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:9: error: method carre overrides nothing
override def carre() {
             ^